<resources>
    <string name="app_name">Ikigai</string>
    <string name="bt_start">Generate your ikigai automatically</string>
    <string name="bt_tip">Draw your ikigai</string>
    <string name="button_erase">Erase Image</string>
    <string name="button_set_color">Set Color</string>
    <string name="label_red">Red</string>
    <string name="label_green">Green</string>
    <string name="label_blue">Blue</string>
    <string name="menuitem_color">Color</string>
    <string name="menuitem_delete">Erase Drawing</string>
    <string name="message_erase">Erase the drawing?</string>
    <string name="title_color_dialog">Choose Color</string>
    <string name="title_paint">Draw your ikigai</string>
    <string name="ok">Ok</string>
    <string name="cancel">Cancel</string>
    <string name="opc">Options</string>
    <string name="c1">Circle 1 Color</string>
    <string name="c2">Circle 2 Color</string>
    <string name="c3">Circle 3 Color</string>
    <string name="c4">Circle 4 Color</string>
    <string name="what">worlds need</string>
    <string name="good">good at</string>
    <string name="love">love</string>
    <string name="paid">paid for</string>
    <string name="passion">passion</string>
    <string name="mission">mission</string>
    <string name="profession">profession</string>
    <string name="vocation">vocation</string>
    <string name="title_doodle">generated automatically</string>
    <string name="verIkigai">Verify Ikigai</string>
    <string name="editText">Edit texts</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="title_delete">Delete drawing</string>
    <string name="subtitle_delete1">Do you really want to delete this drawing?</string>
    <string name="color_selection">select the color</string>
    <string name="isIkigai">is an Ikigai</string>
    <string name="isNotIkigai1">It is not an ikigai. Because has no intersection between the circle </string>
    <string name="isNotIkigai2">and circle </string>
    <string name="information">The Ikigai drawing should contain 4 intersecting circles.
    \nWhen drawing a circle, do not remove your finger from the screen until drawing is complete
    (every circle is considered complete from the moment you remove your finger from the screen, Any different shape of a circle will be treated as a circle)
    \nAfter the 4 circles have been finalized, the ikigai check will be done automatically.
    \nClick "Ok" to start drawing</string>
    >
</resources>
