<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/container_scroll_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <GridLayout
        android:id="@+id/colorDialogGridLayout"
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:columnCount="2"
        android:useDefaultMargins="true"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin">

        <TextView
            android:layout_column="0"
            android:layout_row="0"
            android:layout_gravity="right|center_vertical"
            android:layout_width="wrap_content"
            android:id="@+id/txt1"
            android:layout_height="wrap_content"
            android:text="@string/love" />

        <EditText
            android:id="@+id/ed1"
            android:hint=""
            android:layout_width="wrap_content"
            android:minEms="8"
            android:layout_height="wrap_content"
            android:layout_gravity="fill_horizontal"
            android:maxLength="17"
            android:layout_row="0"
            android:layout_column="1"
            />
        <TextView
            android:layout_column="0"
            android:layout_row="1"
            android:layout_gravity="right|center_vertical"
            android:id="@+id/txt2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/good" />
        <EditText
            android:id="@+id/ed2"
            android:maxLength="17"
            android:hint=""
            android:layout_width="wrap_content"
            android:layout_gravity="fill_horizontal"
            android:layout_row="1"
            android:layout_column="1"
            />
        <TextView
            android:layout_column="0"
            android:layout_row="2"
            android:layout_gravity="right|center_vertical"
            android:id="@+id/txt3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/paid" />
        <EditText
            android:id="@+id/ed3"
            android:maxLength="17"
            android:hint=""
            android:layout_width="wrap_content"
            android:layout_gravity="fill_horizontal"
            android:layout_row="2"
            android:layout_column="1"
            />
        <TextView
            android:layout_column="0"
            android:layout_row="3"
            android:layout_gravity="right|center_vertical"
            android:id="@+id/txt4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/what" />
        <EditText
            android:id="@+id/ed4"
            android:maxLength="17"
            android:hint=""
            android:layout_width="wrap_content"
            android:layout_gravity="fill_horizontal"
            android:layout_row="3"
            android:layout_column="1"
            />
        <TextView
            android:layout_column="0"
            android:layout_row="4"
            android:layout_gravity="right|center_vertical"
            android:id="@+id/txt5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/passion" />
        <EditText
            android:id="@+id/ed5"
            android:maxLength="17"
            android:hint=""
            android:layout_width="wrap_content"
            android:layout_gravity="fill_horizontal"
            android:layout_row="4"
            android:layout_column="1"
            />
        <TextView
            android:layout_column="0"
            android:layout_row="5"
            android:layout_gravity="right|center_vertical"
            android:id="@+id/txt6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mission" />
        <EditText
            android:id="@+id/ed6"
            android:hint=""
            android:maxLength="17"
            android:layout_width="wrap_content"
            android:layout_gravity="fill_horizontal"
            android:layout_row="5"
            android:layout_column="1"
            />
        <TextView
            android:layout_column="0"
            android:layout_row="6"
            android:layout_gravity="right|center_vertical"
            android:id="@+id/txt7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/profession" />
        <EditText
            android:id="@+id/ed7"
            android:maxLength="17"
            android:hint=""
            android:layout_width="wrap_content"
            android:layout_gravity="fill_horizontal"
            android:layout_row="6"
            android:layout_column="1"
            />
        <TextView
            android:layout_column="0"
            android:layout_row="7"
            android:layout_gravity="right|center_vertical"
            android:id="@+id/txt8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/vocation" />
        <EditText
            android:id="@+id/ed8"
            android:maxLength="17"
            android:hint=""
            android:layout_width="wrap_content"
            android:layout_gravity="fill_horizontal"
            android:layout_row="7"
            android:layout_column="1"
            />

        <Button
            android:id="@+id/button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="8"
            android:layout_column="0"
            android:text="@string/cancel" />

        <Button
            android:id="@+id/button2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="8"
            android:layout_column="1"
            android:layout_gravity="right"
            android:text="@string/ok"/>

    </GridLayout>
</ScrollView>